@@ -18,6 +18,7 @@ linux-image (linux-3.2.54-mempo-0.1.22) UNRELEASED; urgency=low
 	* correct format in DEB_BUILD_TIMESTAMP
 	* test for fixed tar version with --sort-input without empty arg
 	* v0.1.22-rc8
+	* use local/bin/tar instead wrapper; using TAR_OPTIONS.
 
  -- mempo <mempo@mempo.org>  Sun, 12 Jan 2014 06:20:00 +0200
 
